--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
         "bracketSpacing": false,
         "printWidth": 100,
         "semi": false,
-        "singleQuote": true
+        "singleQuote": true,
+        "useTabs": true,
+        "tabWidth": 4
     },
     "private": true,
     "scripts": {
